# quant-ana-rs

./: Cargo.toml  diesel.md
data/: ibm_time_series_daily.json  ibm_time_series_intraday.json
db/: diesel.md  schema.rs
resources/: glossary.md  order-engine.md  repos  repos.md
src/: asset.rs  client.rs  main.rs  market_data.rs  misc.rs  order.rs  order_book.rs  order_queue.rs  plot.rs  time_series.rs
src/unused/: market_data.rs
unused/: .env  db.rs  diesel.toml  market_data.rs
unused/migrations/2024-11-25-095037_create_trades/: down.sql  up.sql
