[package]
name = "quant-ana-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path="src/main.rs"
test = false

[lib]
name = "quant_ana"
path="src/main.rs"

[[bench]]
name = "bench"
harness = false

[dependencies]
reqwest = "0.11"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = {version = "0.37", features = ["serialize"]}
diesel = {version = "1.4.8", features = ["postgres"]}
dotenvy = "0.15.0"
csv = {version = "1.3.1"}
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.38" }
bigdecimal = "0.4.6"
itertools = "0.13.0"
plotters = { version = "^0.3.5"}
criterion = { version = "0.4", features = ["html_reports"] }